--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "browserify": "^16.2.2",
+    "create-react-class": "^15.6.3",
     "flux": "^3.1.3",
     "gulp": "^3.9.1",
     "object-assign": "^4.1.1",
