--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "g": "^2.0.1",
     "npm": "^6.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "update": "^0.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,10 +17,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "browser-sync": "^2.24.7",
     "browserify": "^16.2.2",
     "create-react-class": "^15.6.3",
     "flux": "^3.1.3",
     "gulp": "^3.9.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "object-assign": "^4.1.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^2.0.0"
