--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "g": "^2.0.1",
+    "jquery": "^3.3.1",
     "npm": "^6.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
